--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -1,6 +1,6 @@
-body,html{
-  font-weight 200
-}
+html, body
+  width 100%
+  height 100%
 
 .clearfix
   display inline-block
@@ -10,7 +10,6 @@ body,html{
     height 0
     clear both
     visibility hidden
-
 
 @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5)
   .border-1px
@@ -23,3 +22,37 @@ body,html{
     &::after
       -webkit-transform scaleY(0.5)
       transform scaleY(0.5)
+
+/* range -webkit- */
+// 滑条
+input[type='range']
+  -webkit-appearance none
+  height 8px
+  background #666666
+  border-radius 10px
+  outline none
+
+// 滑块
+input[type='range']::-webkit-slider-thumb
+  -webkit-appearance none
+  height 15px
+  width 15px
+  background #cccccc
+  border-radius 50%
+  vertical-align middle
+
+/* range -moz- */
+// 滑条
+input[type='range']::-moz-range-track
+  height 8px
+  background #666666
+  border-radius 10px
+  outline none
+
+// 滑块
+input[type='range']::-moz-range-thumb
+  height 15px
+  width 15px
+  background #cccccc
+  border-radius 50%
+  vertical-align middle
