--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -3,6 +3,7 @@ $color-222 = #222222;
 $color-666 = #666666;
 $color-ccc = #cccccc;
 $color-red = #ff0000;
+$color-opacity-01 = rgba(255, 255, 255, .1);
 
 // font
 $font-size-small-s = 10px
